--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <spring-version>5.3.21</spring-version>
         <spring-boot-version>2.6.6</spring-boot-version>
         <slf4j-version>1.7.36</slf4j-version>
+        <jackson-version>2.13.3</jackson-version>
     </properties>
 
     <dependencyManagement>
@@ -60,13 +61,28 @@
                 <artifactId>spring-context</artifactId>
                 <version>${spring-version}</version>
             </dependency>
-
             <!-- SPRING WEB -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
                 <version>${spring-boot-version}</version>
             </dependency>
+            <!-- REST -->
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson-version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.10.1</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 </project>
