--- a/pom.xml
+++ b/pom.xml
@@ -61,10 +61,20 @@
                 <artifactId>spring-context</artifactId>
                 <version>${spring-version}</version>
             </dependency>
-            <!-- SPRING WEB -->
+            <!-- SPRING BOOT -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
+                <version>${spring-boot-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-validation</artifactId>
+                <version>${spring-boot-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-test</artifactId>
                 <version>${spring-boot-version}</version>
             </dependency>
             <!-- REST -->
