--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <mockito-version>4.6.1</mockito-version>
         <spring-version>5.3.21</spring-version>
         <spring-boot-version>2.6.6</spring-boot-version>
+        <spring-doc-version>1.6.9</spring-doc-version>
         <slf4j-version>1.7.36</slf4j-version>
         <jackson-version>2.13.3</jackson-version>
     </properties>
@@ -76,6 +77,11 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-test</artifactId>
                 <version>${spring-boot-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-ui</artifactId>
+                <version>${spring-doc-version}</version>
             </dependency>
             <!-- REST -->
             <dependency>
